finalized all_features

--- a/Code/Dimensionality Reduction/PCA_Train_Set.ipynb
+++ b/Code/Dimensionality Reduction/PCA_Train_Set.ipynb
@@ -37,31 +37,18 @@
      "output_type": "stream",
      "text": [
       "all features train\n",
-      "    Class With Ambiguous and None Corrected Old Class  \\\n",
-      "0                           Sedan               Sedan   \n",
-      "1                             SUV                 SUV   \n",
-      "2                     Convertible         Convertible   \n",
-      "3                          Pickup              Pickup   \n",
-      "4                             SUV                 SUV   \n",
-      "..                            ...                 ...   \n",
-      "407                   Convertible         Convertible   \n",
-      "408                        Pickup              Pickup   \n",
-      "409                           SUV                 SUV   \n",
-      "410                         Sedan               Sedan   \n",
-      "411                         Sedan               Sedan   \n",
-      "\n",
-      "                                harmonized_filename  \\\n",
-      "0           Sedan_train_orig_test_01516_resized.jpg   \n",
-      "1            SUV_train_orig_train_00294_resized.jpg   \n",
-      "2    Convertible_train_orig_train_04236_resized.jpg   \n",
-      "3         Pickup_train_orig_train_03906_resized.jpg   \n",
-      "4             SUV_train_orig_test_01344_resized.jpg   \n",
-      "..                                              ...   \n",
-      "407  Convertible_train_orig_train_04167_resized.jpg   \n",
-      "408           SUV_train_orig_test_03768_resized.jpg   \n",
-      "409          SUV_train_orig_train_06972_resized.jpg   \n",
-      "410         Sedan_train_orig_test_07188_resized.jpg   \n",
-      "411         Sedan_train_orig_test_00137_resized.jpg   \n",
+      "           Class                             harmonized_filename  \\\n",
+      "0          Sedan         Sedan_train_orig_test_01516_resized.jpg   \n",
+      "1            SUV          SUV_train_orig_train_00294_resized.jpg   \n",
+      "2    Convertible  Convertible_train_orig_train_04236_resized.jpg   \n",
+      "3         Pickup       Pickup_train_orig_train_03906_resized.jpg   \n",
+      "4            SUV           SUV_train_orig_test_01344_resized.jpg   \n",
+      "..           ...                                             ...   \n",
+      "370          SUV           SUV_train_orig_test_06937_resized.jpg   \n",
+      "371        Sedan         Sedan_train_orig_test_02708_resized.jpg   \n",
+      "372        Sedan         Sedan_train_orig_test_05010_resized.jpg   \n",
+      "373        Sedan        Sedan_train_orig_train_02045_resized.jpg   \n",
+      "374  Convertible   Convertible_train_orig_test_02191_resized.jpg   \n",
       "\n",
       "                                       image_path_blur  \\\n",
       "0    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
@@ -70,11 +57,11 @@
       "3    ../../../Images/train/Blurred/Pickup_train_ori...   \n",
       "4    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
       "..                                                 ...   \n",
-      "407  ../../../Images/train/Blurred/Convertible_trai...   \n",
-      "408  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "409  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "410  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "411  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "370  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "371  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "372  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "373  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
+      "374  ../../../Images/train/Blurred/Convertible_trai...   \n",
       "\n",
       "                                    image_path_no_blur  \\\n",
       "0    ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
@@ -83,11 +70,11 @@
       "3    ../../../Images/train/No_Blur/Pickup_train_ori...   \n",
       "4    ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
       "..                                                 ...   \n",
-      "407  ../../../Images/train/No_Blur/Convertible_trai...   \n",
-      "408  ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
-      "409  ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
-      "410  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
-      "411  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
+      "370  ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
+      "371  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
+      "372  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
+      "373  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
+      "374  ../../../Images/train/No_Blur/Convertible_trai...   \n",
       "\n",
       "     ViT_Embedding_Element_0  ViT_Embedding_Element_1  \\\n",
       "0                  -0.244975                 0.085045   \n",
@@ -96,11 +83,11 @@
       "3                  -0.291613                 0.124919   \n",
       "4                  -0.288975                 0.369587   \n",
       "..                       ...                      ...   \n",
-      "407                -0.158255                 0.157451   \n",
-      "408                -0.418245                 0.207232   \n",
-      "409                -0.150467                 0.195957   \n",
-      "410                -0.016809                 0.228351   \n",
-      "411                 0.059586                 0.345798   \n",
+      "370                -0.202336                 0.099946   \n",
+      "371                 0.127041                 0.055380   \n",
+      "372                -0.300395                 0.217117   \n",
+      "373                -0.253200                 0.179523   \n",
+      "374                -0.135949                 0.092534   \n",
       "\n",
       "     ViT_Embedding_Element_2  ViT_Embedding_Element_3  \\\n",
       "0                  -0.117774                -0.399902   \n",
@@ -109,105 +96,105 @@
       "3                   0.101113                -0.145411   \n",
       "4                  -0.056602                -0.335338   \n",
       "..                       ...                      ...   \n",
-      "407                -0.432161                -0.277322   \n",
-      "408                 0.252406                -0.184066   \n",
-      "409                 0.038565                -0.442825   \n",
-      "410                -0.182011                -0.242165   \n",
-      "411                -0.285309                -0.241643   \n",
+      "370                 0.110363                -0.436125   \n",
+      "371                -0.221383                -0.264069   \n",
+      "372                -0.080194                -0.262580   \n",
+      "373                -0.103014                -0.333927   \n",
+      "374                -0.418505                -0.514147   \n",
       "\n",
-      "     ViT_Embedding_Element_4  ...  VGG_Embedding_Element_502  \\\n",
-      "0                   0.034330  ...                   0.019599   \n",
-      "1                  -0.551460  ...                   0.009478   \n",
-      "2                  -0.108216  ...                   0.142523   \n",
-      "3                  -0.197138  ...                   0.030089   \n",
-      "4                   0.238191  ...                   0.249159   \n",
-      "..                       ...  ...                        ...   \n",
-      "407                -0.183226  ...                   0.155400   \n",
-      "408                 0.186511  ...                   0.259423   \n",
-      "409                 0.062831  ...                   0.221398   \n",
-      "410                 0.052763  ...                   0.305472   \n",
-      "411                -0.079839  ...                   0.118134   \n",
+      "     ViT_Embedding_Element_4  ViT_Embedding_Element_5  ...  \\\n",
+      "0                   0.034330                 0.196966  ...   \n",
+      "1                  -0.551460                 0.375702  ...   \n",
+      "2                  -0.108216                 0.354181  ...   \n",
+      "3                  -0.197138                 0.369833  ...   \n",
+      "4                   0.238191                 0.122485  ...   \n",
+      "..                       ...                      ...  ...   \n",
+      "370                -0.054367                 0.523574  ...   \n",
+      "371                -0.133391                 0.367513  ...   \n",
+      "372                 0.088478                 0.233494  ...   \n",
+      "373                 0.201362                 0.246128  ...   \n",
+      "374                -0.023249                 0.308386  ...   \n",
       "\n",
-      "     VGG_Embedding_Element_503  VGG_Embedding_Element_504  \\\n",
-      "0                     0.631864                   0.040191   \n",
-      "1                     0.577905                   0.050671   \n",
-      "2                     0.609230                   0.356170   \n",
-      "3                     0.077514                   0.183065   \n",
-      "4                     2.016973                   0.275861   \n",
+      "     VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
+      "0                     0.019599                   0.631864   \n",
+      "1                     0.009478                   0.577905   \n",
+      "2                     0.142523                   0.609230   \n",
+      "3                     0.030089                   0.077514   \n",
+      "4                     0.249159                   2.016973   \n",
       "..                         ...                        ...   \n",
-      "407                   0.007176                   0.393604   \n",
-      "408                   0.753690                   0.064461   \n",
-      "409                   0.354500                   0.283825   \n",
-      "410                   0.131355                   0.125373   \n",
-      "411                   0.116090                   0.148329   \n",
+      "370                   0.020363                   0.212081   \n",
+      "371                   0.157728                   0.245139   \n",
+      "372                   0.537558                   0.845226   \n",
+      "373                   0.089902                   0.155345   \n",
+      "374                   0.054892                   0.777595   \n",
       "\n",
-      "     VGG_Embedding_Element_505  VGG_Embedding_Element_506  \\\n",
+      "     VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
+      "0                     0.040191                   0.000000   \n",
+      "1                     0.050671                   0.000000   \n",
+      "2                     0.356170                   0.000000   \n",
+      "3                     0.183065                   0.000000   \n",
+      "4                     0.275861                   0.083213   \n",
+      "..                         ...                        ...   \n",
+      "370                   0.182358                   0.000000   \n",
+      "371                   0.279121                   0.091376   \n",
+      "372                   0.190554                   0.000000   \n",
+      "373                   0.534039                   0.000000   \n",
+      "374                   0.226955                   0.145662   \n",
+      "\n",
+      "     VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
       "0                     0.000000                   0.000000   \n",
-      "1                     0.000000                   0.000000   \n",
-      "2                     0.000000                   0.004893   \n",
-      "3                     0.000000                   0.000000   \n",
-      "4                     0.083213                   0.000000   \n",
+      "1                     0.000000                   0.181632   \n",
+      "2                     0.004893                   0.068126   \n",
+      "3                     0.000000                   0.289010   \n",
+      "4                     0.000000                   0.418786   \n",
       "..                         ...                        ...   \n",
-      "407                   0.000000                   0.000000   \n",
-      "408                   0.000000                   0.000000   \n",
-      "409                   0.000000                   0.000000   \n",
-      "410                   0.000000                   0.031120   \n",
-      "411                   0.000000                   0.000000   \n",
+      "370                   0.000000                   0.013313   \n",
+      "371                   0.000000                   0.007251   \n",
+      "372                   0.000000                   0.104770   \n",
+      "373                   0.040990                   0.001010   \n",
+      "374                   0.000000                   0.000396   \n",
       "\n",
-      "     VGG_Embedding_Element_507  VGG_Embedding_Element_508  \\\n",
-      "0                     0.000000                   0.098337   \n",
-      "1                     0.181632                   0.077526   \n",
-      "2                     0.068126                   0.000000   \n",
-      "3                     0.289010                   0.286223   \n",
-      "4                     0.418786                   0.430101   \n",
+      "     VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
+      "0                     0.098337                   0.000000   \n",
+      "1                     0.077526                   0.056239   \n",
+      "2                     0.000000                   0.000000   \n",
+      "3                     0.286223                   0.002977   \n",
+      "4                     0.430101                   0.094569   \n",
       "..                         ...                        ...   \n",
-      "407                   0.020161                   0.050413   \n",
-      "408                   0.171789                   0.042907   \n",
-      "409                   0.064438                   0.000000   \n",
-      "410                   0.002520                   0.130766   \n",
-      "411                   0.000000                   0.022301   \n",
+      "370                   0.375799                   0.283265   \n",
+      "371                   0.036993                   0.486448   \n",
+      "372                   0.759120                   0.534464   \n",
+      "373                   0.027271                   0.027224   \n",
+      "374                   0.174742                   0.000000   \n",
       "\n",
-      "     VGG_Embedding_Element_509  VGG_Embedding_Element_510  \\\n",
-      "0                     0.000000                   0.550390   \n",
-      "1                     0.056239                   0.071139   \n",
-      "2                     0.000000                   0.496660   \n",
-      "3                     0.002977                   0.412420   \n",
-      "4                     0.094569                   1.051647   \n",
-      "..                         ...                        ...   \n",
-      "407                   0.048214                   0.577534   \n",
-      "408                   0.391261                   0.863632   \n",
-      "409                   0.161145                   0.034106   \n",
-      "410                   0.482104                   0.052901   \n",
-      "411                   0.668565                   0.003783   \n",
+      "     VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
+      "0                     0.550390                   0.000368  \n",
+      "1                     0.071139                   0.000000  \n",
+      "2                     0.496660                   0.000000  \n",
+      "3                     0.412420                   0.000000  \n",
+      "4                     1.051647                   0.781257  \n",
+      "..                         ...                        ...  \n",
+      "370                   0.173897                   0.003399  \n",
+      "371                   0.476121                   0.015854  \n",
+      "372                   0.083200                   0.215112  \n",
+      "373                   0.192944                   0.154796  \n",
+      "374                   1.680681                   0.007063  \n",
       "\n",
-      "     VGG_Embedding_Element_511  \n",
-      "0                     0.000368  \n",
-      "1                     0.000000  \n",
-      "2                     0.000000  \n",
-      "3                     0.000000  \n",
-      "4                     0.781257  \n",
-      "..                         ...  \n",
-      "407                   0.007847  \n",
-      "408                   0.016810  \n",
-      "409                   0.000000  \n",
-      "410                   0.049079  \n",
-      "411                   0.000000  \n",
-      "\n",
-      "[6596 rows x 11950 columns]\n",
+      "[6003 rows x 11949 columns]\n",
       "first 5 y values: 0    1\n",
       "1    0\n",
       "2    3\n",
       "3    2\n",
       "4    0\n",
-      "Name: Corrected Old Class, dtype: int64\n",
-      "HOG_16_ppc features shape: (6596, 7056)\n",
-      "HOG_24_ppc features shape: (6596, 2304)\n",
-      "HSV features shape: (6596, 768)\n",
-      "LBP features shape: (6596, 25)\n",
-      "VGG features shape: (6596, 512)\n",
-      "ViT features shape: (6596, 1280)\n",
+      "Name: Class, dtype: int64\n",
+      "HOG_16_ppc features shape: (6003, 7056)\n",
+      "HOG_24_ppc features shape: (6003, 2304)\n",
+      "HSV features shape: (6003, 768)\n",
+      "LBP features shape: (6003, 25)\n",
+      "VGG features shape: (6003, 512)\n",
+      "ViT features shape: (6003, 1280)\n",
       "items in all_features_df columns not in feature groups (hog, vgg, etc.): []\n",
-      "all features shape: (6596, 11945)\n",
+      "all features shape: (6003, 11945)\n",
       "sum of smaller features matrix widths:  11945\n"
      ]
     }
@@ -263,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
