ready for pca and tsne runs on refreshed data

--- a/Code/Dimensionality Reduction/PCA_Train_Set_Plotting.ipynb
+++ b/Code/Dimensionality Reduction/PCA_Train_Set_Plotting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA on Train Set"
+    "# PCA on Train Set Plotting"
    ]
   },
   {
@@ -16,8 +16,7 @@
     "# Packages\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.decomposition import PCA\n",
-    "from Create_Mappings_and_Matrices import create_mappings_and_matrices"
+    "from Dimensionality_Reduction_Functions import *"
    ]
   },
   {
@@ -36,166 +35,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all features train\n",
-      "           Class                             harmonized_filename  \\\n",
-      "0          Sedan         Sedan_train_orig_test_01516_resized.jpg   \n",
-      "1            SUV          SUV_train_orig_train_00294_resized.jpg   \n",
-      "2    Convertible  Convertible_train_orig_train_04236_resized.jpg   \n",
-      "3         Pickup       Pickup_train_orig_train_03906_resized.jpg   \n",
-      "4            SUV           SUV_train_orig_test_01344_resized.jpg   \n",
-      "..           ...                                             ...   \n",
-      "370          SUV           SUV_train_orig_test_06937_resized.jpg   \n",
-      "371        Sedan         Sedan_train_orig_test_02708_resized.jpg   \n",
-      "372        Sedan         Sedan_train_orig_test_05010_resized.jpg   \n",
-      "373        Sedan        Sedan_train_orig_train_02045_resized.jpg   \n",
-      "374  Convertible   Convertible_train_orig_test_02191_resized.jpg   \n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16148\\1264640649.py\", line 1, in <module>\n",
+      "    y, class_mapping, _, feature_matrices_rescaled, feature_matrix_labels = create_mappings_and_matrices()\n",
+      "                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\repo\\computer-vision-project\\Code\\Dimensionality Reduction\\Create_Mappings_and_Matrices.py\", line 32, in create_mappings_and_matrices\n",
+      "    all_features_train = combine_directory_parquets('../../Data/Features/All Features/train')\n",
+      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\repo\\computer-vision-project\\Code\\Dimensionality Reduction\\Create_Mappings_and_Matrices.py\", line 20, in combine_directory_parquets\n",
+      "    combined_df = pd.concat([pd.read_parquet(directory_path + f) for f in file_list])\n",
+      "                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\repo\\computer-vision-project\\Code\\Dimensionality Reduction\\Create_Mappings_and_Matrices.py\", line 20, in <listcomp>\n",
+      "    combined_df = pd.concat([pd.read_parquet(directory_path + f) for f in file_list])\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\pandas\\io\\parquet.py\", line 670, in read_parquet\n",
+      "    return impl.read(\n",
+      "           ^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\pandas\\io\\parquet.py\", line 272, in read\n",
+      "    pa_table = self.api.parquet.read_table(\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\pyarrow\\parquet\\core.py\", line 3003, in read_table\n",
+      "    return dataset.read(columns=columns, use_threads=use_threads,\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\pyarrow\\parquet\\core.py\", line 2631, in read\n",
+      "    table = self._dataset.to_table(\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt\n",
       "\n",
-      "                                       image_path_blur  \\\n",
-      "0    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "1    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "2    ../../../Images/train/Blurred/Convertible_trai...   \n",
-      "3    ../../../Images/train/Blurred/Pickup_train_ori...   \n",
-      "4    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "..                                                 ...   \n",
-      "370  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "371  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "372  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "373  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "374  ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "During handling of the above exception, another exception occurred:\n",
       "\n",
-      "                                    image_path_no_blur  \\\n",
-      "0    ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
-      "1    ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
-      "2    ../../../Images/train/No_Blur/Convertible_trai...   \n",
-      "3    ../../../Images/train/No_Blur/Pickup_train_ori...   \n",
-      "4    ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
-      "..                                                 ...   \n",
-      "370  ../../../Images/train/No_Blur/SUV_train_orig_t...   \n",
-      "371  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
-      "372  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
-      "373  ../../../Images/train/No_Blur/Sedan_train_orig...   \n",
-      "374  ../../../Images/train/No_Blur/Convertible_trai...   \n",
-      "\n",
-      "     ViT_Embedding_Element_0  ViT_Embedding_Element_1  \\\n",
-      "0                  -0.244975                 0.085045   \n",
-      "1                  -0.311410                 0.080667   \n",
-      "2                  -0.048161                 0.171966   \n",
-      "3                  -0.291613                 0.124919   \n",
-      "4                  -0.288975                 0.369587   \n",
-      "..                       ...                      ...   \n",
-      "370                -0.202336                 0.099946   \n",
-      "371                 0.127041                 0.055380   \n",
-      "372                -0.300395                 0.217117   \n",
-      "373                -0.253200                 0.179523   \n",
-      "374                -0.135949                 0.092534   \n",
-      "\n",
-      "     ViT_Embedding_Element_2  ViT_Embedding_Element_3  \\\n",
-      "0                  -0.117774                -0.399902   \n",
-      "1                   0.144856                -0.376064   \n",
-      "2                  -0.329507                -0.446328   \n",
-      "3                   0.101113                -0.145411   \n",
-      "4                  -0.056602                -0.335338   \n",
-      "..                       ...                      ...   \n",
-      "370                 0.110363                -0.436125   \n",
-      "371                -0.221383                -0.264069   \n",
-      "372                -0.080194                -0.262580   \n",
-      "373                -0.103014                -0.333927   \n",
-      "374                -0.418505                -0.514147   \n",
-      "\n",
-      "     ViT_Embedding_Element_4  ViT_Embedding_Element_5  ...  \\\n",
-      "0                   0.034330                 0.196966  ...   \n",
-      "1                  -0.551460                 0.375702  ...   \n",
-      "2                  -0.108216                 0.354181  ...   \n",
-      "3                  -0.197138                 0.369833  ...   \n",
-      "4                   0.238191                 0.122485  ...   \n",
-      "..                       ...                      ...  ...   \n",
-      "370                -0.054367                 0.523574  ...   \n",
-      "371                -0.133391                 0.367513  ...   \n",
-      "372                 0.088478                 0.233494  ...   \n",
-      "373                 0.201362                 0.246128  ...   \n",
-      "374                -0.023249                 0.308386  ...   \n",
-      "\n",
-      "     VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
-      "0                     0.019599                   0.631864   \n",
-      "1                     0.009478                   0.577905   \n",
-      "2                     0.142523                   0.609230   \n",
-      "3                     0.030089                   0.077514   \n",
-      "4                     0.249159                   2.016973   \n",
-      "..                         ...                        ...   \n",
-      "370                   0.020363                   0.212081   \n",
-      "371                   0.157728                   0.245139   \n",
-      "372                   0.537558                   0.845226   \n",
-      "373                   0.089902                   0.155345   \n",
-      "374                   0.054892                   0.777595   \n",
-      "\n",
-      "     VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
-      "0                     0.040191                   0.000000   \n",
-      "1                     0.050671                   0.000000   \n",
-      "2                     0.356170                   0.000000   \n",
-      "3                     0.183065                   0.000000   \n",
-      "4                     0.275861                   0.083213   \n",
-      "..                         ...                        ...   \n",
-      "370                   0.182358                   0.000000   \n",
-      "371                   0.279121                   0.091376   \n",
-      "372                   0.190554                   0.000000   \n",
-      "373                   0.534039                   0.000000   \n",
-      "374                   0.226955                   0.145662   \n",
-      "\n",
-      "     VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
-      "0                     0.000000                   0.000000   \n",
-      "1                     0.000000                   0.181632   \n",
-      "2                     0.004893                   0.068126   \n",
-      "3                     0.000000                   0.289010   \n",
-      "4                     0.000000                   0.418786   \n",
-      "..                         ...                        ...   \n",
-      "370                   0.000000                   0.013313   \n",
-      "371                   0.000000                   0.007251   \n",
-      "372                   0.000000                   0.104770   \n",
-      "373                   0.040990                   0.001010   \n",
-      "374                   0.000000                   0.000396   \n",
-      "\n",
-      "     VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
-      "0                     0.098337                   0.000000   \n",
-      "1                     0.077526                   0.056239   \n",
-      "2                     0.000000                   0.000000   \n",
-      "3                     0.286223                   0.002977   \n",
-      "4                     0.430101                   0.094569   \n",
-      "..                         ...                        ...   \n",
-      "370                   0.375799                   0.283265   \n",
-      "371                   0.036993                   0.486448   \n",
-      "372                   0.759120                   0.534464   \n",
-      "373                   0.027271                   0.027224   \n",
-      "374                   0.174742                   0.000000   \n",
-      "\n",
-      "     VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
-      "0                     0.550390                   0.000368  \n",
-      "1                     0.071139                   0.000000  \n",
-      "2                     0.496660                   0.000000  \n",
-      "3                     0.412420                   0.000000  \n",
-      "4                     1.051647                   0.781257  \n",
-      "..                         ...                        ...  \n",
-      "370                   0.173897                   0.003399  \n",
-      "371                   0.476121                   0.015854  \n",
-      "372                   0.083200                   0.215112  \n",
-      "373                   0.192944                   0.154796  \n",
-      "374                   1.680681                   0.007063  \n",
-      "\n",
-      "[6003 rows x 11949 columns]\n",
-      "first 5 y values: 0    1\n",
-      "1    0\n",
-      "2    3\n",
-      "3    2\n",
-      "4    0\n",
-      "Name: Class, dtype: int64\n",
-      "HOG_16_ppc features shape: (6003, 7056)\n",
-      "HOG_24_ppc features shape: (6003, 2304)\n",
-      "HSV features shape: (6003, 768)\n",
-      "LBP features shape: (6003, 25)\n",
-      "VGG features shape: (6003, 512)\n",
-      "ViT features shape: (6003, 1280)\n",
-      "items in all_features_df columns not in feature groups (hog, vgg, etc.): []\n",
-      "all features shape: (6003, 11945)\n",
-      "sum of smaller features matrix widths:  11945\n"
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\anaconda3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^\n",
+      "AttributeError: 'Source' object has no attribute 'asttext'\n"
      ]
     }
    ],
@@ -212,28 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_PCA(X_list, n_components):\n",
-    "  '''\n",
-    "  Takes as input a list of feature matrices and returns a list of PCA objects and a list of transformed feature matrices.\n",
-    "  '''\n",
-    "  pca_list = []\n",
-    "  xpca_list = []\n",
-    "  for X in X_list:\n",
-    "    # PCA\n",
-    "    pca = PCA(n_components=n_components).fit(X) # not using whiten because it isn't rescaling but something else\n",
-    "    X_pca = pca.transform(X)\n",
-    "    pca_list.append(pca)\n",
-    "    xpca_list.append(X_pca)\n",
-    "  return pca_list, xpca_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
