--- a/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
+++ b/Code/Dimensionality Reduction/tSNE_Train_Set.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.manifold import TSNE\n",
-    "from Create_Mappings_and_Matrices import create_mappings_and_matrices"
+    "from Dimensionality_Reduction_Functions import *"
    ]
   },
   {
